# graph-heatwaves

./: .gitignore  LICENSE  README.md  data.py  prediction.ipynb  pyproject.toml  trainNetwork.py
graph_heatwaves/: data.py  network.py  train.py  trainNetwork.py
