
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "leifdenby", email = "leif@denby.eu"},
]
dependencies = [
    "torch-geometric>=2.4.0",
    "torch>=2.1.1",
    "ipython>=8.18.1",
    "matplotlib>=3.8.2",
    "absl-py>=2.0.0",
    "nb-black @ git+https://github.com/leifdenby/nb_black",
    "loguru>=0.7.2",
    "ipdb>=0.13.13",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ipykernel>=6.27.1",
]


[tool.isort]
profile = "black"
